Fix relative links

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -10,14 +10,14 @@
     %link{rel: "stylesheet", href: "//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"}
     %script{src: "//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"}
     / Website Styles
-    %link{rel: "stylesheet", href: "../stylesheets/normalize.css"}
-    %link{rel: "stylesheet", href: "../stylesheets/all.css"}    
+    %link{rel: "stylesheet", href: "/stylesheets/normalize.css"}
+    %link{rel: "stylesheet", href: "/stylesheets/all.css"}    
     / HTML5 Support for browsers without it
     / [if lt IE 9]
       %script{src:"https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"}
       %script{src:"https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"}
     / JS
-    %script{src:"../javascripts/all.js"}
+    %script{src:"/javascripts/all.js"}
     / Favicons
     %link{ rel: "apple-touch-icon", href: "apple-touch-icon-precomposed.png" }
     %link{ rel: "shortcut icon", href: "favicon.png" }
