--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -18,87 +18,98 @@ h1 {
   margin: 0; }
 
 /* Convenience */
-  $white: #ffffff;
-  $black: #000000;
+$white: #ffffff;
+$black: #000000;
 
-  .medium { font-weight: 500; }
+.medium { font-weight: 500; }
 
-  .abs-right-0 { right: 0; }
+.abs-right-0 { right: 0; }
 
-  .margin-0 { margin: 0 !important; }
+.margin-0 { margin: 0 !important; }
 
-  .top--10px { margin-top: -10px !important; }
-  .top--5px { margin-top: -5px !important; }
-  .top--2px { margin-top: -2px !important; }
-  .top-0 { margin-top: 0 !important; }
-  .top-3px { margin-top: 3px !important; }
-  .top-5px { margin-top: 5px !important; }
-  .top-7px { margin-top: 7px !important; }
-  .top-10px { margin-top: 10px !important; }
-  .top-15px { margin-top: 15px !important; }
-  .top-20px { margin-top: 20px !important; }
-  .top-25px { margin-top: 25px !important; }
-  .top-30px { margin-top: 30px !important; }
-  .top-40px { margin-top: 40px !important; }
+.top--10px { margin-top: -10px !important; }
+.top--5px { margin-top: -5px !important; }
+.top--2px { margin-top: -2px !important; }
+.top-0 { margin-top: 0 !important; }
+.top-3px { margin-top: 3px !important; }
+.top-5px { margin-top: 5px !important; }
+.top-7px { margin-top: 7px !important; }
+.top-10px { margin-top: 10px !important; }
+.top-15px { margin-top: 15px !important; }
+.top-20px { margin-top: 20px !important; }
+.top-25px { margin-top: 25px !important; }
+.top-30px { margin-top: 30px !important; }
+.top-40px { margin-top: 40px !important; }
 
-  .left-0 { margin-left: 0 !important; }
-  .left-5px { margin-left: 5px !important; }
-  .left-10px { margin-left: 10px !important; }
-  .left-20px { margin-left: 20px !important; }
-  .left-30px { margin-left: 30px !important; }
-  .left-60px { margin-left: 60px !important; }
+.left-0 { margin-left: 0 !important; }
+.left-5px { margin-left: 5px !important; }
+.left-10px { margin-left: 10px !important; }
+.left-20px { margin-left: 20px !important; }
+.left-30px { margin-left: 30px !important; }
+.left-60px { margin-left: 60px !important; }
 
-  .right-5px { margin-right: 5px !important; }
-  .right-10px { margin-right: 10px !important; }
-  .right-20px { margin-right: 20px !important; }
-  .right-30px { margin-right: 30px !important; }
+.right-5px { margin-right: 5px !important; }
+.right-10px { margin-right: 10px !important; }
+.right-20px { margin-right: 20px !important; }
+.right-30px { margin-right: 30px !important; }
 
-  .bottom-0 { margin-bottom: 0 !important; }
-  .bottom-10px { margin-bottom: 10px !important; }
-  .bottom-20px { margin-bottom: 20px !important; }
-  .bottom-30px { margin-bottom: 30px !important; }
+.bottom-0 { margin-bottom: 0 !important; }
+.bottom-10px { margin-bottom: 10px !important; }
+.bottom-20px { margin-bottom: 20px !important; }
+.bottom-30px { margin-bottom: 30px !important; }
 
-  .padding-0 { padding: 0 !important; }
-  .padding-2px { padding: 2px !important; }
-  .padding-5px { padding: 5px !important; }
-  .padding-10px { padding: 10px !important; }
-  .padding-20px { padding: 20px !important; }
-  .padding-30px { padding: 30px !important; }
-  .padding-left-right-4px { padding-left: 4px !important; padding-right: 4px !important; }
-  .padding-left-right-5px { padding-left: 5px !important; padding-right: 5px !important; }
-  .padding-top-5px { padding-top: 5px !important}
-  .padding-top-40px { padding-top: 40px !important}
-  .padding-top-60px { padding-top: 60px !important}
-  .padding-bottom-0 { padding-bottom: 0 !important}
-  .padding-bottom-10px { padding-bottom: 10px !important}
-  .padding-bottom-30px { padding-bottom: 30px !important}
+.padding-0 { padding: 0 !important; }
+.padding-2px { padding: 2px !important; }
+.padding-5px { padding: 5px !important; }
+.padding-10px { padding: 10px !important; }
+.padding-20px { padding: 20px !important; }
+.padding-30px { padding: 30px !important; }
+.padding-left-right-4px { padding-left: 4px !important; padding-right: 4px !important; }
+.padding-left-right-5px { padding-left: 5px !important; padding-right: 5px !important; }
+.padding-top-5px { padding-top: 5px !important}
+.padding-top-40px { padding-top: 40px !important}
+.padding-top-60px { padding-top: 60px !important}
+.padding-bottom-0 { padding-bottom: 0 !important}
+.padding-bottom-10px { padding-bottom: 10px !important}
+.padding-bottom-30px { padding-bottom: 30px !important}
 
-  .text-center { text-align: center !important; }
-  .text-right { text-align: right !important; }
-  .line-through { text-decoration: line-through; }
+.text-center { text-align: center !important; }
+.text-right { text-align: right !important; }
+.line-through { text-decoration: line-through; }
 
-  .strong { font-weight: bold; }
-  .italic { font-style: italic; }
+.strong { font-weight: bold; }
+.italic { font-style: italic; }
 
-  .block { display: block; }
-  .inline { display: inline; }
-  .inline-block { display: inline-block; }
-  .table-cell {
-    width: inherit;
-    height: inherit;
-    display: table-cell !important;
-    vertical-align: middle;
-    margin: 0 auto;
-  }
-  .relative { position: relative; }
-  .absolute { position: absolute;}
-  .weak { font-weight: normal; }
-  .capitalize { text-transform: capitalize; }
-  .upper { text-transform: uppercase; }
+.block { display: block; }
+.inline { display: inline; }
+.inline-block { display: inline-block; }
+.table-cell {
+  width: inherit;
+  height: inherit;
+  display: table-cell !important;
+  vertical-align: middle;
+  margin: 0 auto;
+}
+.relative { position: relative; }
+.absolute { position: absolute;}
+.weak { font-weight: normal; }
+.capitalize { text-transform: capitalize; }
+.upper { text-transform: uppercase; }
 
-  .auto { margin: auto; }
+.auto { margin: auto; }
 
 /* Mix-Ins */
+$sm: 768px;
+$md: 982px;
+$lg: 1280px;
+$xtralg: 1420px;
+$red: #d2232a;
+
+@mixin sm { @media (min-width: $sm) { @content } }
+@mixin md { @media (min-width: $md) { @content } }
+@mixin lg { @media (min-width: $lg) { @content } }
+@mixin xtralg { @media (min-width: $xtralg) { @content } }
+
 
 /* Navigation */
 
